--- a/public/sidebar.css
+++ b/public/sidebar.css
@@ -26,6 +26,7 @@ each one is expected to contain some text divs
 
 /* sidebar containers have a smaller-font title */
 .sb-title {
+    user-select: none;
     margin: none;
     text-align: left;
     padding: 0 5px 0 15px;
